--- a/about.html
+++ b/about.html
@@ -160,8 +160,8 @@
                         <p class="lang" key="diversifikasiya_text">С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
                         <div class="balykcylyk container">
                           <div class="row">
-                            <div class="col-lg-6"><img class="img-fluid" style="height: 18rem; width: 100%;" src="images/autoservice/serwis kafe.jpg" alt=""><h6 class="aciklama text-center" >АВТОСЕРВИС и кафе</h6></div>
-                            <div class="col-lg-6"><img class="img-fluid" style="height: 18rem; width: 100%;" src="images/fishing/wild-files-marine-debris-removal copy.jpg" alt=""><h6 class="aciklama text-center" >рыболовство</h6></div>
+                            <div class="col-lg-6"><img class="img-fluid" style="height: 18rem; width: 100%;" src="images/autoservice/serwis kafe.jpg" alt=""><h6 class="aciklama text-center lang" key="autoservice">АВТОСЕРВИС и кафе</h6></div>
+                            <div class="col-lg-6"><img class="img-fluid" style="height: 18rem; width: 100%;" src="images/fishing/wild-files-marine-debris-removal copy.jpg" alt=""><h6 class="aciklama text-center lang" key="fishing" >рыболовство</h6></div>
                           </div>
                         </div>
                         <!-- <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">рыболовство</h5></div> -->
