--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <!-- WORK LIST SECTION -->
         <section id="work" class="container">
           <div class="section-header">
-            <h2 class="lang" key="why_we"><br>Что Вы получаете, сотрудничая с нами?</h2>
+            <h2 class="lang" key="why_we">Что Вы получаете, сотрудничая с нами?</h2>
           </div>
 
           <div class="container" data-aos="fade-up">
