--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center" style="color: blue;"><a href="mailto:zehinli.doganlar@mail.ru">zehinli.doganlar@mail.ru</a></i>
+        <i class="bi bi-envelope d-flex align-items-center" style="color: blue;"><a href="mailto:zehinli.doganlar@sanly.tm">zehinli.doganlar@sanly.tm</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4" style="color: blue;"><a href="tel:+99365369298">+993 65 369298</a></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -68,12 +68,12 @@
           <li><a class="nav-link scrollto active lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
-            <a href="#"><span key="active_lang" class="lang">EN</span><i class="bi bi-chevron-down langs"></i></a>
+            <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
-              <li><a href="#" onclick="changeLang('tm');" class="lang">TM</a></li>
-              </li>
-              <li><a href="#" onclick="changeLang('ru');" class="lang">RU</a></li>
-              <li><a href="#" onclick="changeLang('en');" class="lang">EN</a></li>
+            </li>
+              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="translate"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag"></a></li>
+              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="translate"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag"></a></li>
+              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="translate"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag"></a></li>
             </ul>
           </li>
         </ul>
@@ -88,30 +88,30 @@
         <div class="gallery">
           <div class="setir" data-aos="fade-up">
             <div class="gallery__card">
-              <img src="images/gallery/5.webp" alt="barlag"><div class="gallery__text">Работа на КПП</div></div>
-            <div class="gallery__card"><img src="images/gallery/6.webp" alt=""><div class="gallery__text">Осмотр въезжающего транспорта</div></div>
-            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""><div class="gallery__text">Осмотр выезжающего транспорта</div></div>
-              <div class="gallery__card"><img src="images/gallery/taze gosmaly/9 copy.jpg" alt=""><div class="gallery__text">Осмотр периметра Объекта</div></div>
+              <img src="images/gallery/5.webp" alt="barlag"><div class="gallery__text lang" key="gal1">Работа на КПП</div></div>
+            <div class="gallery__card"><img src="images/gallery/6.webp" alt=""><div class="gallery__text lang" key="gal2">Осмотр въезжающего транспорта</div></div>
+            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""><div class="gallery__text lang" key="gal3">Осмотр выезжающего транспорта</div></div>
+              <div class="gallery__card"><img src="images/gallery/taze gosmaly/9 copy.jpg" alt=""><div class="gallery__text lang" key="gal4">Осмотр периметра Объекта</div></div>
             <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
-            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text">Обеспечение внутри объектного и пропускного режима</div></div>
-            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text">Санитарно-медицинский контроль</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (2) copy.jpg" alt=""><div class="gallery__text">Контроль пультовой охраны</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/10 copy.jpg" alt=""><div class="gallery__text">Контрольно-пропускной режим на КПП</div></div>
+            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text lang" key="gal5">Обеспечение внутри объектного и пропускного режима</div></div>
+            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text lang" key="gal6">Санитарно-медицинский контроль</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (2) copy.jpg" alt=""><div class="gallery__text lang" key="gal7">Контроль пультовой охраны</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/10 copy.jpg" alt=""><div class="gallery__text lang" key="gal8">Контрольно-пропускной режим на КПП</div></div>
             
           </div>
           <div class="setir" data-aos="fade-down">
-            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">Проверка ручной клади</div></div>
-            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">Осмотр большегрузных машин</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text">Контроль пропускного режима</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">Контроль за проходящими через турникет</div></div>
+            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text lang" key="gal9">Проверка ручной клади</div></div>
+            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text lang" key="gal10">Осмотр большегрузных машин</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text lang" key="gal11">Контроль пропускного режима</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text lang" key="gal12">Контроль за проходящими через турникет</div></div>
           </div>
         </div>
 
           <div class="gallery-ver" data-aos="fade-left">
-            <div class="gallery__hrz"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Состав сотрудников 1-ой смены</div></div>
-            <div class="gallery__hrz"><img src="images/gallery/Фото - 3 смена.jpg" alt=""><div class="gallery__text">Состав сотрудников 2-ой смены</div></div>
+            <div class="gallery__hrz"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text lang" key="gal13">Состав сотрудников 1-ой смены</div></div>
+            <div class="gallery__hrz"><img src="images/gallery/Фото - 3 смена.jpg" alt=""><div class="gallery__text lang" key="gal14">Состав сотрудников 2-ой смены</div></div>
           </div>
       </div>
 
@@ -141,6 +141,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/db.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
 
 </body>
 
