--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <script src="assets/js/db.js" defer></script>
+
   <!-- Favicons -->
   <link href="images/logo/logotype-32.png" rel="icon">
   <link href="images/logo/logotype-1801.png" rel="apple-touch-icon">
@@ -195,7 +197,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/db.js"></script>
   <script src="assets/js/jquery.min.js"></script>
 </body>
 </html>
