--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <meta content="хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра..." name="description">
   <meta content="Zehinli Doganlar, gorag gullugy, Turkmenistan, Hojalyk Jemgyýeti, Зехинли доганлар" name="keywords">
 
+  <script src="assets/js/db.js" defer></script>
+
+
+
   <!-- Favicons -->
   <link href="images/logo/logotype-32.png" rel="icon">
   <link href="images/logo/logotype-1801.png" rel="apple-touch-icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
@@ -27,6 +32,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
 
   <!-- =======================================================
   * Template Name: Reveal - v4.8.0
@@ -509,7 +515,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/db.js"></script>
   <script src="assets/js/jquery.min.js"></script>
 
 </body>
