--- a/index.html
+++ b/index.html
@@ -462,18 +462,21 @@
       <div class="karobka" data-aos="fade-right">
         <div class="container">
           <div class="form">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/mail.php" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="user_name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="form-group col-md-6 mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" required>
                 </div>
               </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              <div class="form-group  col-md-12 mt-3">
+                <input type="number" class="form-control" name="user_phone" id="subject" placeholder="Phone number" required>
               </div>
+              <!-- <div class="form-group mt-3">
+                <input type="text" class="form-control" name="user_subject" id="subject" placeholder="Subject" required>
+              </div> -->
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
