--- a/about.html
+++ b/about.html
@@ -185,14 +185,14 @@
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="images/clients/adal sut.jpg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="images/clients/Turkmengaz.png" class="img-fluid" alt=""></div>
+            <!-- <div class="swiper-slide"><img src="images/clients/Turkmengaz.png" class="img-fluid" alt=""></div> -->
             <div class="swiper-slide"><img src="images/clients/HYUNDAI ENGINEERING.jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/alkar-insaat-1.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/azrosprominvest.webp" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/JINSHI.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/kayalarkimya.JPG" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/overseasfze.com.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="images/clients/xinjiang west development international trading.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="images/clients/xinjiang west development international trading.png" class="img-fluid" alt="xinjiang west development international trading"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -210,33 +210,33 @@
           <h3 class="lang header text-center" key="charity_h3" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
             <div class="row mb-3 mt-5">
               <img class="img-fluid col-lg-4" src="images/minnetdarlyk/ToreAhunMetjidi.webp" alt="Töre Ahun Metjidi">
-              <P class="col-lg-8 text-end lang" key="charity_1" >Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
+              <P class="col-lg-8 text-end lang" key="charity_1" >Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат</P>
             </div>
             <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/reabilitasiya copy.jpg" style="height: 92.1%;" alt="FLYER"></div>
-                <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-6 text-end lang" key="charity_2" >Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат.</p>
+                <div class="img-fluid col-2 flyer_near2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
+                <p class="col-6 text-end lang" key="charity_2" >Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-2 flyer"><img class="ramka" src="images/minnetdarlyk/olympiada_flyer.webp" style="width:66%; height: auto;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img style="width:100%; border: 0.3px dotted grey;" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-8 text-end flyer_text lang" key="charity_3" >С целью приобретения спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участие люди с синдромом Дауна и инвалиды по интеллекту были переданы денежные средства Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ).</p>
+                <p class="col-8 text-end flyer_text lang" key="charity_3" >С целью приобретения спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участие люди с синдромом Дауна и инвалиды по интеллекту были переданы денежные средства Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ)</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-3 flyer4"><img class="ramka" src="images/minnetdarlyk/1663771252973.webp" style="height: 100%;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near4"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-7 text-end lang" key="charity_4" >Для улучшения условий содержания детей инвалидов и организации поездок по святым местам, а также отдыха в оздоровительных центрах нами была оказана финансовая поддержка Общества слепых и глухих  в г. Балканабат  Балканского велаята.</p>
+                <p class="col-7 text-end lang" key="charity_4" >Для улучшения условий содержания детей инвалидов и организации поездок по святым местам, а также отдыха в оздоровительных центрах нами была оказана финансовая поддержка Общества слепых и глухих  в г. Балканабат  Балканского велаята</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/muzeyin surady2.jpg" style="height: 88%;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-6 text-end lang" key="charity_5">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята.</p>
+                <p class="col-6 text-end lang" key="charity_5">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-2 flyer3"><img class="ramka" src="images/minnetdarlyk/10-14.webp" style="width:92%; height: auto;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near3"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk2 copy.webp"><img class="ramka" style="width:100%" src="images/minnetdarlyk/minnetdarlyk2 copy.webp" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-8 text-end lang" key="charity_6">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь.</p>
+                <p class="col-8 text-end lang" key="charity_6">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь</p>
               </div>       
               <p class="text-lg-center lang" key="charity_end" style="font-weight: bolder; font-size: 1.6rem;">Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
             </div>
