--- a/services.html
+++ b/services.html
@@ -58,7 +58,8 @@
       <div id="logo">
         <div><img class="logotype" src="images/logotype.png" alt=""></div>
         <div>
-          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar" <span>Hojalyk Jemgyýeti</span></a></h1>
+          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar"</a></h1>
+          <h1 style="margin-top: -10px;"><a href="index.html" class="logotip"><span class="lang" key="companyn2">Hojalyk Jemgyýeti</span></a></h1>
         </div>
         <!-- Uncomment below if you prefer to use an image logo -->
       </div>
@@ -192,7 +193,7 @@
     <section class="container" id="howwe">
 
       <div class="section-header">
-        <h2 class="whywe lang" key="why_we" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
+        <h2 class="whywe lang" key="how_we_work" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
       </div>
 
       <div class="process container" data-aos="fade-up">
@@ -230,7 +231,7 @@
       <section id="about" data-aos="fade-up" style="margin-top: -5rem;">
         <div class="container">
      <div class="section-header">
-        <h2 class="whywe lang text-center" key="you_get" data-aos="fade-up">«НАШ УСПЕХ – ВАША БЕЗОПАСНОСТЬ»</h2>
+        <h2 class="whywe lang text-center" key="you_get" data-aos="fade-up">НАШ УСПЕХ – ВАША БЕЗОПАСНОСТЬ</h2>
       </div>
           <div class="content">
             <p class="lang" key="services_end">С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
