--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <div id="logo">
         <div><img class="logotype" src="images/logotype.png" alt=""></div>
         <div>
-          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar" <span class="lang">Hojalyk Jemgyýeti</span></a></h1>
+          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar"</a></h1>
+          <h1 style="margin-top: -10px;"><a href="index.html" class="logotip"><span class="lang" key="companyn2">Hojalyk Jemgyýeti</span></a></h1>
         </div>
         <!-- Uncomment below if you prefer to use an image logo -->
       </div>
