--- a/contact.html
+++ b/contact.html
@@ -143,34 +143,34 @@
 
       <div class="container">
 
-      <div class="karobka" data-aos="fade-right">
-        <div class="container">
-          <div class="form">
-            <form action="forms/mail.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-12">
-                  <input type="text" name="user_name" class="form-control" id="name" placeholder="Your Name" required>
+        <div class="karobka" data-aos="fade-right">
+          <div class="container">
+            <div class="form">
+              <form action="forms/mail.php" method="POST" role="form" class="php-email-form">
+                <div class="row">
+                  <div class="form-group col-md-6">
+                    <input type="text" name="user_name" class="form-control" id="name" placeholder="Your Name" required>
+                  </div>
+                  <div class="form-group col-md-6 mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" required>
+                  </div>
                 </div>
-                <div class="form-group col-md-12 mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" required>
+                <div class="form-group  col-md-12 mt-3">
+                  <input type="number" class="form-control" name="user_phone" id="subject" placeholder="Phone number" required>
                 </div>
-              </div>
-              <div class="form-group  col-md-12 mt-3">
-                <input type="number" class="form-control" name="user_phone" id="subject" placeholder="Phone number" required>
-              </div>
-              <!-- <div class="form-group mt-3">
-                <input type="text" class="form-control" name="user_subject" id="subject" placeholder="Subject" required>
-              </div> -->
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+                <!-- <div class="form-group mt-3">
+                  <input type="text" class="form-control" name="user_subject" id="subject" placeholder="Subject" required>
+                </div> -->
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="user_message" rows="5" placeholder="Message" required></textarea>
+                </div>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit" class="lang" key="send_message">Отправить сообщение</button></div>
+              </form>
           </div>
         </div>
       </div>
