--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 <input type="text" class="form-control" name="user_subject" id="subject" placeholder="Subject" required>
               </div> -->
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="user_message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
