php address new

--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
             <div class="swiper-slide"><img src="images/clients/JINSHI.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/kayalarkimya.JPG" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/overseasfze.com.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="images/clients/xinjiang west development international trading.png" class="img-fluid" alt="xinjiang west development international trading"></div>
+            <!-- <div class="swiper-slide"><img src="images/clients/xinjiang west development international trading.png" class="img-fluid" alt="xinjiang west development international trading"></div> -->
           </div>
           <div class="swiper-pagination"></div>
         </div>
