--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
               <div class="text-center" style="margin-top:-15px;">
               <div >
                   <h3 class="cta-text lang" key="section3h3">Обращаясь к ЧОП «Зехинли доганлар» </h3>
-                  <h2 class="cta-title lang" key="section3p"> «Вы сохраните свое имущество в целостности и сохранности!»</h2>
+                  <h2 class="cta-title lang" key="section3p">Вы сохраните свое имущество в целостности и сохранности!</h2>
                 </div>
               </div>
             </div>
